2023-10-23T00:43:34Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6607267369 # 2009
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-23
* notice: last 14d: unq all: 73 140
* notice: prev accum: outdated-unq outdated-all / unq all: 1774 5502 / 1871 5641
* notice: next accum: outdated-unq outdated-all / unq all: 1774 5502 / 1871 5642
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +15 +18 -0 -0 / 15 18
* notice: removed / changed dates: [] / [2023-10-22]

2023-10-22T16:11:09Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6604863054 # 2008
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-22
* notice: last 14d: unq all: 73 139
* notice: prev accum: outdated-unq outdated-all / unq all: 1766 5492 / 1857 5625
* notice: next accum: outdated-unq outdated-all / unq all: 1774 5502 / 1871 5641
* notice: prev exec diff / last date diff / accum: unq all: +14 +16 -0 -0 / +15 +17 -0 -0 / 15 17
* notice: removed / changed dates: [2023-10-08] / [2023-10-22]

2023-10-22T08:11:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6602610135 # 2007
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-22
* notice: last 14d: unq all: 61 124
* notice: prev accum: outdated-unq outdated-all / unq all: 1766 5492 / 1856 5624
* notice: next accum: outdated-unq outdated-all / unq all: 1766 5492 / 1857 5625
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -7 -9 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-10-08 2023-10-22]

2023-10-22T00:47:23Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6600657507 # 2006