@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-10T00:42:51Z",
-  "count" : 11,
+  "timestamp" : "2023-10-23T08:12:55Z",
+  "count" : 7,
   "count_minmax" : [ 4, 11 ],
-  "count_decinc" : [ -0, +11 ],
-  "uniques" : 10,
+  "count_decinc" : [ -4, +11 ],
+  "uniques" : 7,
   "uniques_minmax" : [ 4, 10 ],
-  "uniques_decinc" : [ -0, +10 ]
+  "uniques_decinc" : [ -3, +10 ]
 }
