@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-10-23T00:43:34Z",
+  "timestamp" : "2023-10-23T08:12:55Z",
   "count_outdated" : 5502,
   "uniques_outdated" : 1774,
-  "count" : 5642,
-  "uniques" : 1871,
+  "count" : 5643,
+  "uniques" : 1872,
   "clones" : [
     {
       "timestamp": "2023-10-09T00:00:00Z",
-      "count": 11,
+      "count": 7,
       "count_minmax": [ 4, 11 ],
-      "count_decinc": [ 0, 11 ],
-      "uniques": 10,
+      "count_decinc": [ 4, 11 ],
+      "uniques": 7,
       "uniques_minmax": [ 4, 10 ],
-      "uniques_decinc": [ 0, 10 ]
+      "uniques_decinc": [ 3, 10 ]
     },
     {
       "timestamp": "2023-10-10T00:00:00Z",
@@ -130,6 +130,15 @@
       "uniques": 15,
       "uniques_minmax": [ 1, 15 ],
       "uniques_decinc": [ 0, 15 ]
+    },
+    {
+      "timestamp": "2023-10-23T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
