@@ -1,3 +1,12 @@
+2023-10-23T08:12:55Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6610496216 # 2010
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-23
+* notice: last 14d: unq all: 70 137
+* notice: prev accum: outdated-unq outdated-all / unq all: 1774 5502 / 1871 5642
+* notice: next accum: outdated-unq outdated-all / unq all: 1774 5502 / 1872 5643
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -3 -4 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-10-09 2023-10-23]
+
 2023-10-23T00:43:34Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6607267369 # 2009
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-23
